# RederGL

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Readme.md  RederGL  launch.sh
RederGL/Headers/: benchmark.hpp  blocks.hpp  chunk.hpp  settings.hpp  shader.hpp  viewport.hpp
RederGL/Shaders/: color.fs  instanced.vs  instanced_tight.vs  shader.fs  shader.vs  static.vs  terrain_level.fs  transform.vs  transparent.fs
RederGL/Sources/: main.cpp  shader.cpp
Unique/: unique.py
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: RederGL.cpp
